--- a/ChatApp/templates/detail.html
+++ b/ChatApp/templates/detail.html
@@ -81,5 +81,13 @@
 <script
   src="{{url_for('static',filename='js/keyboardSendMessage.js')}}"
   type="text/javascript"
+  ></script>
+  <script
+  src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.min.js"
+  ></script>
+  <script
+  src="{{url_for('static',filename='js/socket.js')}}"
+  type="text/javascript"
 ></script>
+
 {% endblock %}
