--- a/ChatApp/templates/base.html
+++ b/ChatApp/templates/base.html
@@ -17,10 +17,10 @@
     />
     <link rel="icon" href="../static/img/favicon.ico" />
   </head>
-  <!-- {% include 'sidebar.html'%} -->
-  <!-- {% include 'mobile-header.html'%} -->
   <body>
-    {% block body%} {% endblock %} {% block script %}{% endblock %}
+    <!-- {% include 'sidebar.html'%} -->
+    <!-- {% include 'mobile-header.html'%} -->
+    {% block body %}{% endblock %} {% block script %}{% endblock %}
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
@@ -29,9 +29,9 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-    <!-- <script
+    <script
       src="{{url_for('static',filename='js/sidebar.js')}}"
       type="text/javascript"
-    ></script> -->
+    ></script>
   </body>
 </html>
