タブメニューにリンクを追加

--- a/ChatApp/templates/registration/login.html
+++ b/ChatApp/templates/registration/login.html
@@ -1,16 +1,8 @@
 {% extends 'registration/base.html' %} {% block title %}
 <title>login</title>
 {% endblock %} {% block body %}
-<div class="registration-wrapper">
+<!-- <div class="registration-wrapper">
   <div class="registration-container">
-    <img
-      src="{{ url_for('static',filename='img/registration.png') }}"
-      class="registration-main-pic"
-    />
-    <img
-      src="{{ url_for('static',filename='img/mobile-registration.png') }}"
-      class="registration-mobile-pic"
-    />
     <div class="registration-form-wrapper">
       <div class="registration-logo">
         <img
@@ -54,5 +46,5 @@
       </form>
     </div>
   </div>
-</div>
+</div> -->
 {% endblock %}
