--- a/ChatApp/templates/registration/base.html
+++ b/ChatApp/templates/registration/base.html
@@ -16,25 +16,17 @@
   </head>
   <body>
     {% block body %}{% endblock %}
-      <div class="tabnav">
         <div class="tab">
           <ul class="tab__menu">
-            <li class="tab__menu-item is-active" data-tab="01">login</li>
-            <li class="tab__menu-item" data-tab="02">signup</li>
+            <li class="tab__menu-item is-active" data-tab="01"><a href="{{ url_for('login') }}">login</a></li>
+            <li class="tab__menu-item is-active" data-tab="02"><a href="{{ url_for('signup') }}">signup</a></li>
           </ul>
           <div class="tab__panel">
             <div class="tab__panel-box tab__panel-box001 is-show" data-panel="01">
               <p class="tab__panel-text"></p>
               <div class="registration-container">
                 <div class="registration-form-wrapper">
-                  <div class="registration-logo">
-                    <img
-                      src="{{ url_for('static',filename='img/plaudern-logo.png') }}"
-                      alt="logo"
-                    />
-                  </div>
                   <form class="registration-form" method="post">
-                    <h1 class="registration-title">WELCOME BACK!</h1>
                     <div>
                       <label for="email-input">Email</label>
                       <input
@@ -62,9 +54,9 @@
                       </ul>
                       {% endif %} {% endwith %}
                       <button class="registration-button pink">LOGIN</button>
-                      <a class="switch-register-mode" href="{{ url_for('signup') }}">
+                      <!-- <a class="switch-register-mode" href="{{ url_for('signup') }}">
                         登録はこちら
-                      </a>
+                      </a> -->
                     </div>
                   </form>
                 </div>
@@ -73,19 +65,8 @@
             <div class="tab__panel-box tab__panel-box002" data-panel="02">
               <p class="tab__panel-text"></p>
               <div class="registration-container">
-                <img
-                  src="{{ url_for('static',filename='img/registration.png') }}"
-                  class="registration-main-pic"
-                />
                 <div class="registration-form-wrapper">
-                  <div class="registration-logo">
-                    <img
-                      src="{{ url_for('static',filename='img/plaudern-logo.png') }}"
-                      alt="logo"
-                    />
-                  </div>
                   <form class="registration-form signup" method="post">
-                    <h1 class="registration-title">HI THERE!</h1>
                     <div>
                       <label for="signup-name-input">Name</label>
                       <input
@@ -144,7 +125,6 @@
           </div>
         </div>
       </div>
-    </div>
 
     <script
     src="{{url_for('static',filename='js/tabmenu.js')}}"
