--- a/ChatApp/templates/registration/signup.html
+++ b/ChatApp/templates/registration/signup.html
@@ -1,7 +1,7 @@
 {% extends 'registration/base.html' %} {% block title %}
 <title>signup</title>
 {% endblock %} {% block body %}
-<div class="registration-wrapper">
+<!-- <div class="registration-wrapper">
   <div class="registration-container">
     <img
       src="{{ url_for('static',filename='img/registration.png') }}"
@@ -70,5 +70,5 @@
       </form>
     </div>
   </div>
-</div>
+</div> -->
 {% endblock %}
