registrationのタブメニュー完成

--- a/ChatApp/templates/registration/login.html
+++ b/ChatApp/templates/registration/login.html
@@ -11,7 +11,7 @@
       <p class="tab__panel-text"></p>
       <div class="registration-container">
         <div class="registration-form-wrapper">
-          <form class="registration-form" method="post">
+          <form class="registration-form login" method="post">
             <div>
               <label for="email-input">Email</label>
               <input
