--- a/ChatApp/static/css/tabmenu.css
+++ b/ChatApp/static/css/tabmenu.css
@@ -1,5 +1,6 @@
 .tab {
-  max-width: 400px;
+  max-width: 64vh;
+  min-height: 64vh;
   margin: 0 auto;
   margin-top: 50px;
 }
@@ -7,17 +8,17 @@
 /* タブメニュー */
 .tab__menu {
   display: flex;
-  align-items: flex-end; /* メニューを下揃え&高さを調整 */
-  justify-content: center;
-  /* flex-direction: row-reverse; */
-  min-height: 50px; /* メニュー切替時にタブがズレないように */
+  justify-content: space-evenly;
+  min-height: 50px;
   padding: 0;
   margin: 0;
+  flex-direction: row;
+  align-items: flex-end;
 }
 
 .tab__menu-item {
   list-style: none;
-  width: 200px;
+  width: 40vh;
   padding: 8px 0; /* メニューに高さを付ける */
   margin: 0;
   text-align: center;
@@ -27,6 +28,11 @@
   border-top-right-radius: 10px;
   cursor: pointer;
   transition: all 0.3s; /* アニメーション */
+}
+
+.tab__menu-item a {
+  color: #5dab73;
+  display: block;
 }
 
 .tab__menu-item:last-of-type {
@@ -41,15 +47,21 @@
   margin: 0;
 }
 
+.tab__menu-item.is-active a {
+  pointer-events: none;
+}
+
 /* タブパネル */
 .tab__panel {
-  max-width: 400px;
+  min-width: 64vh;
+  min-height: 64vh;
   margin: 0 auto;
   padding: 0;
 }
 
 .tab__panel-box {
-  min-height: 400px; /* テキスト量が多くなっても対応できるように */
+  max-width: 64vh;
+  min-height: 64vh; /* テキスト量が多くなっても対応できるように */
   padding: 10px 30px;
   border-radius: 0px 0px 10px 10px;
 }
