--- a/ChatApp/templates/registration/login.html
+++ b/ChatApp/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends 'registration/base.html' %} {% block title %}
 <title>login</title>
 {% endblock %} {% block body %}
-<div class="tab">
+<div class="registration-tab">
   <ul class="tab__menu">
     <li class="tab__menu-item is-active" data-tab="01"><a href="{{ url_for('login') }}">login</a></li>
     <li class="tab__menu-item" data-tab="02"><a href="{{ url_for('signup') }}">signup</a></li>
