ロントエンド実装合わせてapp.pyの記述を変更

--- a/ChatApp/templates/registration/signup.html
+++ b/ChatApp/templates/registration/signup.html
@@ -3,8 +3,8 @@
 {% endblock %} {% block body %}
 <div class="registration-tab">
   <ul class="tab__menu">
-    <li class="tab__menu-item" data-tab="01"><a href="{{ url_for('login') }}">login</a></li>
-    <li class="tab__menu-item is-active" data-tab="02"><a href="{{ url_for('signup') }}">signup</a></li>
+    <li class="tab__menu-item" data-tab="01">login</li>
+    <li class="tab__menu-item is-active" data-tab="02">signup</li>
   </ul>
   <div class="tab__panel">
     <div class="tab__panel-box tab__panel-box001" data-panel="01">
