--- a/ChatApp/templates/base.html
+++ b/ChatApp/templates/base.html
@@ -18,7 +18,7 @@
     <link rel="icon" href="../static/img/favicon.ico" />
   </head>
   <body>
-    {% include 'sidebar.html'%} {% include 'mobile-header.html'%} {% block body
+    {% include 'mobile-header.html'%} {% block body
     %}{% endblock %} {% block script %}{% endblock %}
     <script
       type="module"
