--- a/ChatApp/templates/registration/login.html
+++ b/ChatApp/templates/registration/login.html
@@ -1,13 +1,13 @@
 {% extends 'registration/base.html' %} {% block title %}
-<title>signup</title>
+<title>login</title>
 {% endblock %} {% block body %}
 <div class="registration-tab">
   <ul class="tab__menu">
-    <li class="tab__menu-item" data-tab="01"><a href="{{ url_for('login') }}">login</a></li>
-    <li class="tab__menu-item is-active" data-tab="02"><a href="{{ url_for('signup') }}">signup</a></li>
+    <li class="tab__menu-item is-active" data-tab="01">login</li>
+    <li class="tab__menu-item" data-tab="02">signup</li>
   </ul>
   <div class="tab__panel">
-    <div class="tab__panel-box tab__panel-box001" data-panel="01">
+    <div class="tab__panel-box tab__panel-box001 is-show" data-panel="01">
       <p class="tab__panel-text"></p>
       <div class="registration-container">
         <div class="registration-form-wrapper">
@@ -46,7 +46,7 @@
         </div>
       </div>
     </div>
-    <div class="tab__panel-box tab__panel-box002 is-show" data-panel="02">
+    <div class="tab__panel-box tab__panel-box002" data-panel="02">
       <p class="tab__panel-text"></p>
       <div class="registration-container">
         <div class="registration-form-wrapper">
