--- a/ChatApp/templates/detail.html
+++ b/ChatApp/templates/detail.html
@@ -67,7 +67,7 @@
         name="newMessageForm"
       >
         <textarea name="message" id="message" autofocus></textarea>
-        <input type="hidden" name="cid" value="channel-id" />
+        <input type="hidden" name="cid" value="{{ channel.id }}" />
         <div id="message-send-tooltip">
           <button type="submit" id="add-message-btn">
             <ion-icon name="paper-plane"></ion-icon>
@@ -101,6 +101,13 @@
 ></script>
 <script
   src="{{url_for('static',filename='js/keyboardSendMessage.js')}}"
+  type="text/javascript"
+></script>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.min.js"
+></script>
+<script
+  src="{{ url_for('static', filename='js/socket.js') }}"
   type="text/javascript"
 ></script>
 {% endblock %}
