--- a/ChatApp/templates/registration/login.html
+++ b/ChatApp/templates/registration/login.html
@@ -3,8 +3,8 @@
 {% endblock %} {% block body %}
 <div class="registration-tab">
   <ul class="tab__menu">
-    <li class="tab__menu-item is-active" data-tab="01">login</li>
-    <li class="tab__menu-item" data-tab="02">signup</li>
+    <li class="tab__menu-item is-active" data-tab="01"><a href="{{ url_for('login') }}">login</a></li>
+    <li class="tab__menu-item" data-tab="02"><a href="{{ url_for('signup') }}">signup</a></li>
   </ul>
   <div class="tab__panel">
     <div class="tab__panel-box tab__panel-box001 is-show" data-panel="01">
@@ -39,6 +39,7 @@
               </ul>
               {% endif %} {% endwith %}
               <button class="registration-button pink">LOGIN</button>
+              <a href="{{ url_for('signup') }}">
                 登録はこちら
               </a>
             </div>
