--- a/ChatApp/templates/detail.html
+++ b/ChatApp/templates/detail.html
@@ -3,24 +3,37 @@
 {% endblock %} {% block body %}
 <div class="detail-container">
   <div class="flower-obj">
-    <div class="tulip">
-      <img
-        src="{{ url_for('static',filename='img/tulip.png') }}"
-        width="192"
-        height="360"
-        alt=""
-      />
-    </div>
-    <!-- <div class="sleep">
-      <img src="{{ url_for('static',filename='img/zzz.png') }}" alt="" />
-    </div> -->
     <div class="alarm">
       <p>〇〇さんのリラックスタイムが近づいてるよ〜</p>
     </div>
-    <!-- <div class="notice"><p>11時だよ！お花は寝るね～！</p></div> -->
+    <div class="tulip-area">
+      <div class="tulip">
+        <img
+        src="{{ url_for('static',filename='img/tulip.png') }}"
+        width="192"
+        height="360"
+        alt="チューリップ"
+        />
+      </div>
+      <div class="sleep">
+        <img src="{{ url_for('static',filename='img/zzz.png') }}" width="96" height="96" alt="zzz" />
+      </div>
+    </div>
+    <div class="scoop">
+      <img
+        src="{{ url_for('static',filename='img/scoop.png') }}"
+        alt="スコップ"
+        width="64"
+        height="64"
+      />
+    </div>
   </div>
   <div id="chat-header">
     <a href="{{ url_for('index') }}" class="back">&lt;</a>
+    <img
+      src="{{ url_for('static',filename='img/flower-icon.png') }}"
+      alt="お花のアイコン"
+    />
     <p id="chatroom-name">{{ channel.name }}</p>
     {% if channel.abstract is not none %}
     <p id="chatroom-description">{{ channel.abstract }}</p>
@@ -70,7 +83,13 @@
         <input type="hidden" name="cid" value="channel-id" />
         <div id="message-send-tooltip">
           <button type="submit" id="add-message-btn">
-            <ion-icon name="paper-plane"></ion-icon>
+            <!-- <ion-icon name="paper-plane"></ion-icon> -->
+            <img
+              src="{{ url_for('static',filename='img/watering-can.png') }}"
+              alt="ジョウロ"
+              width="64"
+              height="64"
+            />
           </button>
           <div id="message-send-tooltip-description">
             <p>Command + Enter</p>
