--- a/ChatApp/templates/detail.html
+++ b/ChatApp/templates/detail.html
@@ -4,7 +4,10 @@
 <div class="detail-container">
   <div class="flower-obj">
     <div class="alarm">
-      <p>〇〇さんのリラックスタイムが近づいてるよ〜</p>
+      <p>お花は寝るよ〜</p>
+    </div>
+    <div class="watering-can">
+      <img src="{{ url_for('static',filename='img/watering-can-active.png') }}" alt="ジョウロ" width="216" height="216">
     </div>
     <div class="tulip-area">
       <div class="tulip">
@@ -108,6 +111,10 @@
 </script>
 <script
   src="{{url_for('static',filename='js/alarm.js')}}"
+  type="text/javascript"
+></script>
+<script
+  src="{{url_for('static',filename='js/watering-can.js')}}"
   type="text/javascript"
 ></script>
 <script
