お花を成長させる機能の仮実装コードを追加(画像切り替えが効かない)

--- a/ChatApp/templates/detail.html
+++ b/ChatApp/templates/detail.html
@@ -12,7 +12,8 @@
     <div class="tulip-area">
       <div class="tulip">
         <img
-        src="{{ url_for('static',filename='img/tulip.png') }}"
+        class="growth"
+        src="{{ url_for('static',filename=') }}"
         width="192"
         height="360"
         alt="チューリップ"
@@ -115,6 +116,10 @@
 ></script>
 <script
   src="{{url_for('static',filename='js/watering-can.js')}}"
+  type="text/javascript"
+></script>
+<script
+  src="{{url_for('static',filename='js/growth.js')}}"
   type="text/javascript"
 ></script>
 <script
