--- a/ChatApp/templates/index.html
+++ b/ChatApp/templates/index.html
@@ -97,11 +97,15 @@
   type="text/javascript"
 ></script>
 <script
-  src="{{url_for('static',filename='js/pagination.js')}}"
+  src="{{url_for('static',filename='js/growth.js')}}"
   type="text/javascript"
 ></script>
 <script
-  src="{{url_for('static',filename='js/Channels/delete-channel.js')}}"
-  type="text/javascript"
+src="{{url_for('static',filename='js/pagination.js')}}"
+type="text/javascript"
+></script>
+<script
+src="{{url_for('static',filename='js/Channels/delete-channel.js')}}"
+type="text/javascript"
 ></script>
 {% endblock %}
