--- a/ChatApp/templates/index.html
+++ b/ChatApp/templates/index.html
@@ -80,6 +80,7 @@
   </div>
   {% include 'modal/add-channel.html' %} {% include 'modal/delete-channel.html'
   %}
+  {% include 'modal/timer.html' %} 
 </div>
 {% endblock %} {% block script %}
 <script type="text/javascript">
