--- a/ChatApp/templates/modal/update-channel.html
+++ b/ChatApp/templates/modal/update-channel.html
@@ -13,13 +13,13 @@
       <input
         type="text"
         placeholder="Channel name"
-        class="channel-form-input"
+        class="modal-form-input"
         name="channelTitle"
       />
       <input
         type="text"
         placeholder="Channel description"
-        class="channel-form-input"
+        class="modal-form-input"
         name="channelDescription"
       />
       <input type="hidden" name="cid" value="{{ channel.id }}" />
