--- a/ChatApp/static/css/main.css
+++ b/ChatApp/static/css/main.css
@@ -162,6 +162,38 @@
   transition: all 0.5s;
 }
 
+.menu-box {
+  padding: 0;
+}
+
+.menu-box li {
+  list-style: none;
+  padding: 4px 0;
+  margin: 0 -4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+}
+
+.menu-box li a {
+  color: grey;
+  flex-grow: 1;
+}
+
+.menu-box li a:hover {
+  cursor: pointer;
+}
+
+.menu-box li:hover a {
+  color: var(--navy_blue);
+  transition: all 0.5s;
+}
+
+
+
+
+
 .delete-button {
   font-size: 16px;
   background-color: var(--snow);
