--- a/ChatApp/templates/index.html
+++ b/ChatApp/templates/index.html
@@ -50,7 +50,18 @@
         </div>
         <div class="tab__panel-box tab__panel-box002" data-panel="02">
           <p class="tab__panel-text"></p>
-          <ul>
+          <ul class="menu-box">
+            <li class="list">
+              <a class="alarm-link" href="#">
+                <span class="icon"
+                  ><ion-icon
+                    background="#5DAB73"
+                    name="alarm-outline"
+                  ></ion-icon
+                ></span>
+                <span class="title">おやすみ設定</span>
+              </a>
+            </li>
             <li class="list">
               <a href="{{ url_for('logout') }}">
                 <span class="icon"
@@ -80,7 +91,7 @@
   </div>
   {% include 'modal/add-channel.html' %} {% include 'modal/delete-channel.html'
   %}
-  {% include 'modal/timer.html' %} 
+  {% include 'modal/alarm-modal.html' %} 
 </div>
 {% endblock %} {% block script %}
 <script type="text/javascript">
@@ -107,6 +118,10 @@ type="text/javascript"
 ></script>
 <script
 src="{{url_for('static',filename='js/Channels/delete-channel.js')}}"
+type="text/javascript"
+></script>
+<script
+src="{{url_for('static',filename='js/Channels/alarm-modal.js')}}"
 type="text/javascript"
 ></script>
 {% endblock %}
