--- a/ChatApp/templates/modal/add-channel.html
+++ b/ChatApp/templates/modal/add-channel.html
@@ -1,24 +1,23 @@
 <div id="add-channel-modal" class="modal">
   <div class="modal-content">
     <div class="modal-header">
-      <h5>新しいチャットルーム</h5>
+      <h5>Add channel</h5>
       <span class="modalClose" id="add-page-close-button">×</span>
     </div>
     <form name="addChannelForm" class="modal-body" action="/" method="POST">
-      <p>名前</p>
       <input
         type="text"
         placeholder="Channel name"
-        class="channel-form-input"
+        class="modal-form-input"
         name="channelTitle"
       />
-      <!-- <input
+      <input
         type="text"
         placeholder="Channel description"
-        class="channel-form-input"
+        class="modal-form-input"
         name="channelDescription"
-      /> -->
-      <button id="add-channel-confirmation-button">追加</button>
+      />
+      <button id="add-channel-confirmation-button">登録</button>
     </form>
   </div>
 </div>
