--- a/ChatApp/templates/detail.html
+++ b/ChatApp/templates/detail.html
@@ -13,7 +13,7 @@
       <div class="tulip">
         <img
         class="growth"
-        src="{{ url_for('static',filename=') }}"
+        src="{{ url_for('static',filename='img/tulip.png') }}"
         width="192"
         height="360"
         alt="チューリップ"
@@ -84,7 +84,7 @@
         name="newMessageForm"
       >
         <textarea name="message" id="message" autofocus></textarea>
-        <input type="hidden" name="cid" value="channel-id" />
+        <input type="hidden" name="cid" value="{{ channel.id }}" />
         <div id="message-send-tooltip">
           <button type="submit" id="add-message-btn">
             <!-- <ion-icon name="paper-plane"></ion-icon> -->
@@ -132,6 +132,13 @@
 ></script>
 <script
   src="{{url_for('static',filename='js/keyboardSendMessage.js')}}"
+  type="text/javascript"
+></script>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.min.js"
+></script>
+<script
+  src="{{ url_for('static', filename='js/socket.js') }}"
   type="text/javascript"
 ></script>
 {% endblock %}
