registration画面の些細な変更

--- a/ChatApp/templates/registration/base.html
+++ b/ChatApp/templates/registration/base.html
@@ -20,10 +20,8 @@
   <body>
     <div class="registration-grid">
       <div class="logo-area">
-        <img
+        <img class="registration"
           src="{{ url_for('static',filename='img/logo.png') }}"
-          width="512"
-          height="512"
           alt="logo"
         />
         <h1>Bloom</h1>
