カラーコードの変数化

--- a/ChatApp/static/css/color.css
+++ b/ChatApp/static/css/color.css
@@ -1,11 +1,13 @@
 /* 色を使い回しできるように変数にする */
 
 :root {
-  --snow: #ffffff;
-  --carbon: #3e4149;
-  --navy: #4e5b66;
-  --ash_grey: #f0f0f0;
-  --navy_blue: #122543;
-  --salmon_pink: #f57978;
-  --middle_pink: #f45554;
+  --green1:#ECF7DF; /* ログイン画面の背景色など */
+  --green2:#E8F9D3; /* ボタン、 ホーム画面タブの後ろ側など*/
+  --green3:#BCDEBE; /* ホーム画面の背景色、ログイン画面タブの後ろ側、モーダル外枠など*/
+  --green4:#5DAB73; /* 文字色など*/
+  --cream:#FFFAED; /* タブの前側など*/
+  --navyblue:#4A4545; /* 文字色など（黒の代わり）*/
 }
+
+
+/* greenは1から4になるにつれて濃くなります*/
