細かい部分の修正

--- a/ChatApp/templates/index.html
+++ b/ChatApp/templates/index.html
@@ -40,7 +40,6 @@
                     <ul class="pagination"></ul>
                     <p id="next">
                       <span>NEXT</span>
-                      >
                     </p>
                   </div>
                 </div>
@@ -106,6 +105,10 @@
 ></script>
 <script
   src="{{url_for('static',filename='js/Channels/add-channel.js')}}"
+  type="text/javascript"
+></script>
+<script
+  src="{{url_for('static',filename='js/flowers.js')}}"
   type="text/javascript"
 ></script>
 <script
