--- a/ChatApp/templates/modal/add-channel.html
+++ b/ChatApp/templates/modal/add-channel.html
@@ -5,6 +5,7 @@
       <span class="modalClose" id="add-page-close-button">×</span>
     </div>
     <form name="addChannelForm" class="modal-body" action="/" method="POST">
+      <p>部屋の名前</p>
       <input
         type="text"
         placeholder="Channel name"
