--- a/ChatApp/static/css/detail.css
+++ b/ChatApp/static/css/detail.css
@@ -5,7 +5,8 @@
   grid-template:
   "head head head head"
   "obj ... chat chat"
-  "obj ... chat chat";
+  "obj ... chat chat"
+  "... ... foot foot";
   grid-template-columns: auto 5rem 1fr;
 }
 
@@ -144,13 +145,14 @@
 
 .chat-box {
   grid-area: chat;
+  min-height: 80vh;
   max-height: 80vh;
   display: flex;
   flex-direction: column;
   padding-left: 30px;
-  margin: 0 2vh 2vh;
+  margin: 5vh 2vh 1vh;
   background: #fffaed;
-  border-radius: 10% 10% 0 0;
+  border-radius: 30px;
 }
 
 /* メッセージエリア */
@@ -224,6 +226,7 @@
   background-color: rgba(18, 37, 67, 0.4);
   color: var(--snow);
   margin-left: auto;
+  
 }
 
 /* .box-left:before {
@@ -262,10 +265,12 @@
 /* ========================================================== */
 
 .typing-box-wrapper {
-  position: fixed;
+  /* position: fixed; */
+  grid-area: foot;
+  margin-left: auto;
   left: 55vh;
-  bottom: 4vh;
-  width: 60%;
+  /* bottom: 4vh; */
+  width: 100%;
   height: 15vh;
   background-color: var(--snow);
   background-size: contain;
@@ -278,7 +283,7 @@
   -webkit-backdrop-filter: blur(16px);
   height: 80%;
   width: 100%;
-  margin: auto 1rem;
+  margin: auto 1rem 2rem;
   position: relative;
   background-color: #ecf0f0;
   border-radius: 8px;
