--- a/ChatApp/templates/detail.html
+++ b/ChatApp/templates/detail.html
@@ -100,10 +100,10 @@
                 height="64"
               />
             </button>
-            <div id="message-send-tooltip-description">
+            <!-- <div id="message-send-tooltip-description">
               <p>Command + Enter</p>
               <p>Ctrl + Enter</p>
-            </div>
+            </div> -->
           </div>
         </form>
       </div>
