--- a/ChatApp/static/css/detail.css
+++ b/ChatApp/static/css/detail.css
@@ -216,22 +216,24 @@
   line-height: 1.5;
   letter-spacing: 0.1em;
   white-space: normal;
+  border: 2px solid var(--navyblue);
+  color: var(--navyblue);
+  box-shadow: 0px 1px 4px gray;
 }
 
 .box-left {
-  background-color: rgba(18, 37, 67, 0.2);
-  color: var(--navy_blue);
+  background-color: var(--green1);
+  border-radius: 15px 15px 15px 0px;
 }
 
 .box-right {
-  background-color: rgba(18, 37, 67, 0.4);
-  color: var(--snow);
+  background-color: var(--green3);
+  border-radius: 15px 15px 0px 15px;
   margin-left: auto;
   word-break: break-word;
-  
 }
 
-/* .box-left:before {
+/*.box-left:before {
   position: absolute;
   top: 3px;
   left: 3px;
