--- a/ChatApp/templates/registration/login.html
+++ b/ChatApp/templates/registration/login.html
@@ -42,7 +42,7 @@
                 {% endfor %}
               </ul>
               {% endif %} {% endwith %}
-              <button class="registration-button pink">ログイン</button>
+              <button class="registration-button">ログイン</button>
             </div>
           </form>
         </div>
@@ -99,7 +99,7 @@
                 {% endfor %}
               </ul>
               {% endif %} {% endwith %}
-              <button class="registration-button pink">新規登録</button>
+              <button class="registration-button">新規登録</button>
             </div>
           </form>
         </div>
