--- a/ChatApp/templates/registration/signup.html
+++ b/ChatApp/templates/registration/signup.html
@@ -38,7 +38,7 @@
                 {% endfor %}
               </ul>
               {% endif %} {% endwith %}
-              <button class="registration-button pink">ログイン</button>
+              <button class="registration-button">ログイン</button>
                 登録はこちら
               </a>
             </div>
@@ -97,7 +97,7 @@
                 {% endfor %}
               </ul>
               {% endif %} {% endwith %}
-              <button class="registration-button pink">新規登録</button>
+              <button class="registration-button">新規登録</button>
             </div>
           </form>
         </div>
