--- a/ChatApp/templates/registration/base.html
+++ b/ChatApp/templates/registration/base.html
@@ -21,7 +21,7 @@
     <div class="registration-grid">
       <div class="logo-area">
         <img class="registration"
-          src="{{ url_for('static',filename='img/icon.png') }}"
+          src="{{ url_for('static',filename='img/logo.png') }}"
           alt="logo"
         />
         <h1>Bloom</h1>
